--- a/app/about/templates/about/index.html
+++ b/app/about/templates/about/index.html
@@ -11,12 +11,13 @@
       <img src="{{ url_for('static', filename='img/Greenville-Logo.png') }}" alt="GUFC Logo">
     </div>
     <div class="container-sm pt-3 pb-5">
-      <p>A National Association member of the U.S. Soccer Federation, the National Association of Competitive Soccer Clubs (doing business as “US Club Soccer”) is a non-profit organization committed to the development and support of soccer clubs in the United States. Among US Club Soccer's guiding principles:</p>
-      <ul>
-        <li></li>
-      </ul>
-      <p></p>
-      <p></p>
+      <h1 class="text-center py-3">We Are Greenville United</h1>
+      <p>
+        The vision of bringing a football club to the Greenville NC community began in early 2018 after recognizing the need for a semi-professional/professional sports team in the city. With the city’s diverse population and the four founder's passion for football, the vision was solidified. In the spring of 2020, that vision became a reality when Greenville United FC was established. The club was founded by four local friends with a passion for football and a vision of bringing the community together through the beautiful game. The goal is to provide a competitive platform for local players to showcase their talent on a regional/national level. Greenville United competed for the first time in the fall of 2021 in the First Flight League (FFL).
+      </p>
+      <p>
+        Greenville United Football Club, will be the primary channel for the community to support and help local players advance and showcase their talents.  It is believed a professional ball team will drive home-grown talent and home-grown pride.  The plan includes having festivals prior to each game at the home field John Paul ll High School, which will enhance the entertainment experience.  A professional soccer team for the city of Greenville will help bring the city together, positively impact the youth, and support the city’s economic growth aspirations.
+      </p>
     </div>
   </div>
 {% endblock %}
