--- a/app/about/templates/about/players.html
+++ b/app/about/templates/about/players.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'about/base.html' %}
 
 {% block css %}
-  
+  {{ super() }}
 {% endblock %}
 
 {% block main %}
+  {{ super() }}  
   <div class="container">
     <h1 class="py-4">Players.html</h1>
     <p>About Players page</p>
@@ -12,5 +13,5 @@
 {% endblock %}
 
 {% block js %}
-  
+  {{ super() }}
 {% endblock %}\
