--- a/app/about/templates/about/team.html
+++ b/app/about/templates/about/team.html
@@ -1,13 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'about/base.html' %}
 
 {% block css %}
-  
+  {{ super() }}
 {% endblock %}
 
 {% block main %}
-  
+  {{ super() }}
+
 {% endblock %}
 
 {% block js %}
-  
+  {{ super() }}
 {% endblock %}
