--- a/app/about/templates/about/league.html
+++ b/app/about/templates/about/league.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'about/base.html' %}
 
 {% block css %}
+  {{ super() }}
   
 {% endblock %}
 
 {% block main %}
+  {{ super() }}
   <div class="container">
     <h1 class="py-4">League.html</h1>
     <p>About league page</p>
@@ -12,5 +14,6 @@
 {% endblock %}
 
 {% block js %}
+  {{ super() }}
   
 {% endblock %}
