--- a/app/partners/templates/partners/donation.html
+++ b/app/partners/templates/partners/donation.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block css %}
-  
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/donation.css') }}">
 {% endblock %}
 
 {% block main %}
