--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -87,6 +87,7 @@
               </ul>
             </li>
           </ul>
+          {% if inSeason %}
           <div class="ms-auto">
             <a href="{{ url_for('community.show_schedule') }}" class="text-decoration-none">
               <div class="container schedule-btn">
@@ -113,11 +114,12 @@
               </div>
             </a>
           </div>
+          {% endif %}
         </div>
       </div>
     </nav>
   </header>
-  <main role="main" class="pt-3 pb-5" style="min-height: 80vh;">
+  <main role="main" class="pb-5" style="min-height: 80vh;">
     {% block main %}{% endblock %}
   </main>
   <footer style="background-color: var(--gufc-green); color: white;">
